--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p {
 .postAuthor img, .aboutAuthor img {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
+  border-radius: 50px;
   vertical-align: middle;
   /*width fois height = 1.5 d'origine, 900x600 d'origine*/
 }
