--- a/style.css
+++ b/style.css
@@ -1,72 +1,54 @@
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 a {
-  color: #1acb9c;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #f6a623;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  color: #333;
+	color: white;
+	text-decoration: none;
 }
 
 body {
-  margin: 0;
-  color: #555;
+	font-family: Montserrat, sans-serif;
+	background-color: white;
+	margin: 0;
+	}
 
-  font-family: 'Montserrat', sans-serif;
+button {
+	border-radius: 30px;
+	background-color: plum;
+	border: solid 1px white;
+	height: 50px;
+	width: 50px;
+	}
+
+h1, h2, h3, h4, h5, h6 {
+	color: black;
 }
 
-p {
-  line-height: 1.5;
-}
-
-.aboutAuthor img {
-  width: 200px;
-  height: 200px;
-  margin: 0;
-  border: solid 1px black;
-}
-
-.column {
-  min-width: 300px;
-  display: inline-block;
-  vertical-align: top;
-}
 .container {
-  max-width: 1000px;
-  margin: 0 auto;
+	max-width: 1000px;
+	margin: 0 auto;
 }
+.emptyAnswer {
+		color: red;
+		transform: rotate(-25deg);
+		font-size: 25px;
+		}
 
-.about {
-  text-align: center;
-}
 .post, .about {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 60px 0;
-}
-
-.postAuthor img, .aboutAuthor img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50px;
-  vertical-align: middle;
-  /*width fois height = 1.5 d'origine, 900x600 d'origine*/
-}
+		  max-width: 800px;
+		  margin: 0 auto;
+		  padding: 60px 0;
+		}
 
 .postAuthor span {
-  margin-left: 10px;
-}
+		  margin-left: 10px;
+	}
+
 
 .postContainer:nth-child(even) {
-  background-color: #f2f2f2;
-}
+		  background-color: #f2f2f2;
+	}
 
-.postDate {
+	.postDate {
   color: #d2d2d2;
 
   font-size: 14px;
@@ -76,59 +58,98 @@ p {
   letter-spacing: 0.1em;
 }
 
-#aboutContent {
-  margin: auto;
+.postAuthor img {
+		height: 50px;
+		width: 50px;
+		border-radius: 50px;
+		vertical-align: middle;
+	}
+
+.signUp {
+	padding: 5px;
+	background-color: lightGray;
+	border-radius: 30px;
+	color: white;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 40%;
+	}
+
+.testAnswer {
+	color: yellow;
+	font-size: 20px;
+	font-family: Verdana;
+	margin-bottom: 100px;
+	}
+
+ .rightAnswer {
+	color: purple;
+	font-weight: bold;
+	font-family: Arial;
+	font-size: 30px;
+	}
+
+#testButton {
+	width: 150px;
+	height: 150px;
+}
+#content {
+	margin: 0;
 }
 
 #header {
-  background-color: #1abc9c;
-  height: 150px;
-  line-height: 150px;
-  margin: 0;
+	background-color: plum;
+	height: 150px;
+	line-height: 150px;
+	vertical-align: middle;
 }
 
 #header a {
-  color: white;
-  text-decoration: none;
+	color: white;
+	text-decoration: none;
 
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
 }
 
 #header a:hover {
-  color: #222;
+	color: black;
 }
 
 #headerTitle {
-  display: block;
-  float: left;
+	display: block;
+	float: left;
+	padding: 5px 0 0 20px;
 
-  font-size: 20px;
-  font-weight: bold;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 #headerNav {
-  display: block;
-  float: right;
-  margin-top: 0;
-}
+	display: block;
+	float: right;
+	padding-top: 5px;
+	padding-right: 20px;
+	margin-top: 0;
+	}
 
 #headerNav li {
-  display: inline;
-  padding-left: 20px;
+	display: inline;
+	padding-left: 20px;
+	font-weight: bold;
 }
 
-#footer {
-  background-color: #2f2f2f;
-  padding: 50px 0;
-}
-
-#footer h4 {
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-}
+ #footer {
+	background-color: SteelBlue;
+	color: white;
+	text-decoration: none;
+	position: absolute;
+	width: 100%;
+	height: 6.5rem;
+	bottom: 0;
+ }
 
 #footer p {
-  color: white;
+	left: 0;
 }
